# OrcVIO-Stereo

./: CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
config/: camchain-imucam-dcist-acl.yaml  camchain-imucam-dcist-erl.yaml  camchain-imucam-dcist-mit.yaml  camchain-imucam-erl.yaml
config/euroc_config/: MH_01_easy.yaml  V1_01_easy.yaml
include/initializer/: DynamicInitializer.h  FlexibleInitializer.h  ImuPreintegration.h  StaticInitializer.h  feature_manager.h  initial_alignment.h  initial_sfm.h  math_utils.h  solve_5pts.h
include/orcvio/: dataset_reader.h  euroc_gt.h  feature.h  feature_ov.h  image_processor.h  image_processor_nodelet.h  orcvio.h  orcvio_nodelet.h  state.h  utils.h
launch/: image_processor_dcist.launch  image_processor_euroc.launch  image_processor_fla.launch  orcvio_dcist.launch  orcvio_euroc.launch  orcvio_euroc_eval.launch  orcvio_fla.launch  orcvio_sim.launch
rviz/: rviz_dcist_config.rviz  rviz_euroc_config.rviz
scripts/: batch_run_euroc.py
src/: DynamicInitializer.cpp  FlexibleInitializer.cpp  StaticInitializer.cpp  euroc_gt.cpp  feature_manager.cpp  feature_ov.cpp  image_processor.cpp  image_processor_nodelet.cpp  initial_alignment.cpp  initial_sfm.cpp  orcvio.cpp  orcvio_nodelet.cpp  publish_euroc_gt.cpp  solve_5pts.cpp  utils.cpp
test/: feature_initialization_test.cpp  math_utils_test.cpp
